--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </section>
 
 <section class="categorias">
-    <h2>Filmes e séries</h2>
+    <h2>Jogos</h2>
     <div class="categoria-videos">
 
         <a href="https://www.youtube.com/watch?v=ZwSew6fPKaw">
